src/objects/Alias__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Business_Unit__c</fullName>
        <label>Alias Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Description__c</fullName>
        <label>Alias Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alias_Level__c</fullName>
        <label>Alias Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Operating_Group__c</fullName>
        <label>Alias_Operating_Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Parent__c</fullName>
        <label>Alias Parent</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Region__c</fullName>
        <label>Alias Region</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Service_Line__c</fullName>
        <label>Alias Service Line</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_State__c</fullName>
        <label>Alias State</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_unique__c</fullName>
        <externalId>true</externalId>
        <label>Alias_unique</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Alias</label>
    <nameField>
        <label>Alias</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>